<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="frag_primeiro">Fragmento Inicial</string>
    <string name="frag_segundo">Fragmento Login</string>
    <string name="app_name">Auxílio ao Cidadão</string>
    <string name="mensagem_ini">Faça reportes e consulte situações na sua cidade!</string>
    <string name="msg_login_login">Entrar</string>
    <string name="msg_voltar">Voltar</string>
    <string name="bt_registo">Registo</string>
    <string name="notas_pessoais">Notas Pessoais</string>
    <string name="logo">Logo</string>
    <string name="texto_utilizador">Utilizador</string>
    <string name="texto_pass">Palavra-passe</string>
    <string name="hint_pass">Insira aqui a palavra-passe</string>
    <string name="hint_id">Insira aqui o nome de utilizador</string>
    <string name="but_apagar">Apagar</string>
    <string name="but_alterar">Alterar</string>
    <string name="but_salvar">Guardar</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_descricao">Descrição</string>
    <string name="tituloEmpty">O título não pode ficar em branco!</string>
    <string name="descricaoEmpty">A descrição não pode ficar em branco!</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="erroInsucesso">Erro ao comunicar com o servidor!</string>
    <string name="erroOnFailure">Erro ao receber resposta do servidor!</string>
    <string name="logout">Sair</string>
    <string name="addReport">Adicionar reporte</string>
    <string name="LoginOK">Login bem sucedido!</string>
    <string name="LoginFalhado">Os dados inseridos não são válidos!</string>
    <string name="guarda_login" translatable="false">file1</string>
    <string name="id1" translatable="false">0</string>
    <string name="lastId" translatable="false">1</string>
    <string name="filtros">Filtros</string>
    <string name="Latlong">Coordenadas</string>
    <string name="insereProblema">Insira aqui a situação a reportar</string>
    <string name="addFoto">Adicionar Foto</string>
    <string name="problemaTit">Problema a reportar</string>
    <string name="enviar">Enviar</string>
    <string name="userVazio">O username está vazio!</string>
    <string name="passVazia">A pass está vazia!</string>
    <string name="filtro5km">5 Km</string>
    <string name="filtro20km">20 Km</string>
    <string name="obras">Obras</string>
    <string name="acidentes">Acidentes</string>
    <string name="sucesso">Sucesso!</string>
    <string name="lat">Lat</string>
    <string name="lng">Lng</string>
    <string name="coord">Coordenadas</string>
    <string name="markerCLick">Não é possivel mostrar informação!</string>
    <string name="Editar">Editar</string>
    <string name="Apagar">Apagar</string>
    <string name="visualizarReport">Detalhes do reporte</string>
    <string name="Report">Situação</string>
    <string name="editarFoto">Editar foto</string>


    <!-- TODO: Remove or change this placeholder text -->


</resources>