<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:contentDescription="@string/logo"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_inicio" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/msg_login_login"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_titulo"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <TextView
            android:id="@+id/text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="15dp"
            android:layout_alignRight="@id/text_pass"
            android:text="@string/texto_utilizador" />

        <TextView
            android:id="@+id/text_pass"
            android:layout_below="@id/text_id"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_pass" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/hint_pass"
            android:layout_below="@id/editTextId"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:layout_toRightOf="@id/text_pass"/>

        <EditText
            android:id="@+id/editTextId"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_id"
            android:textSize="15sp"
            android:layout_toRightOf="@id/text_id"/>
    </RelativeLayout>

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_login_login"
        android:backgroundTint="@color/buttons"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/msg_voltar"
        android:backgroundTint="@color/buttons"
        android:layout_gravity="center"
        />


</LinearLayout>