<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicial"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_inicio" />


    <TextView
        android:id="@+id/textview_first"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/mensagem_ini" />



    <Button
        android:id="@+id/buttonNotas"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/buttons"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:text="@string/notas_pessoais" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:backgroundTint="@color/buttons"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_height="60dp"
        android:text="@string/msg_login_login" />
</LinearLayout>