<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditDeleteReport">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_voltar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:backgroundTint="@color/buttonsBackground"
        android:contentDescription="buttonVoltar"
        android:src="@drawable/icon_back"
        android:tintMode="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageViewPhoto2"
        android:layout_width="165dp"
        android:layout_height="159dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintBottom_toTopOf="@+id/buttonEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAddPhoto2" />


    <Button
        android:id="@+id/buttoneditPhoto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="@color/buttonsBackground"
        android:onClick="addphoto2"
        android:text="@string/editarFoto"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPhoto2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textReporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/visualizarReport"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_titulos1"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginLeft="166dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="19dp"
        android:text="@string/Report"
        android:textColor="@color/black"
        android:textSize="@dimen/paddin2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ediTextProblem2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/buttonsBackground"
        android:onClick="editReport"
        android:text="@string/Editar"
        app:layout_constraintBottom_toTopOf="@+id/fab_voltar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/buttonsBackground"
        android:onClick="deleteReport"
        android:text="@string/Apagar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ediTextProblem2"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="30dp"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPhoto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLatSub2"
        android:layout_width="129dp"
        android:layout_height="28dp"
        android:layout_marginStart="194dp"
        android:layout_marginLeft="194dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="27dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="@dimen/paddin2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewLngSubs2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLngSubs2"
        android:layout_width="121dp"
        android:layout_height="28dp"
        android:layout_marginStart="194dp"
        android:layout_marginLeft="194dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="44dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="@dimen/paddin2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="259dp"
        android:layout_marginRight="259dp"
        android:layout_marginBottom="118dp"
        android:text="@string/coord"
        android:textColor="@color/black"
        android:textSize="@dimen/paddin2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ediTextProblem2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>